--- a/.gitignore
+++ b/.gitignore
@@ -22,5 +22,7 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-# Intellij
-.idea/*
+#Intellij
+rmi/.idea/shelf/
+rmi/.idea/workspace.xml
+rmi/target
