--- a/.gitignore
+++ b/.gitignore
@@ -23,5 +23,13 @@
 hs_err_pid*
 
 #Intellij
-rmi/.idea
-rmi/target
+*/.idea
+*/target
+# Default ignored files
+*/shelf/
+*/workspace.xml
+# Datasource local storage ignored files
+*/dataSources/
+*/dataSources.local.xml
+# Editor-based HTTP Client requests
+*/httpRequests/
