--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,41 @@
+# Emacs/vim
+
+*~
+*.swp
+
+# VSCode
+
+.vscode
+.classpath
+.project
+.settings/
+
+
+# MacOS
+
+.DS_Store
+
+# CS56 specific: Secrets files
+
+localhost.json
+heroku.json
+
+# Maven (from: https://github.com/github/gitignore/blob/master/Maven.gitignore)
+
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+# https://github.com/takari/maven-wrapper#usage-without-binary-jar
+.mvn/wrapper/maven-wrapper.jar
+
+# Java (from: https://github.com/github/gitignore/blob/master/Java.gitignore)
+
 # Compiled class file
 *.class
 
@@ -21,15 +59,3 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-
-#Intellij
-*/.idea
-*/target
-# Default ignored files
-*/shelf/
-*/workspace.xml
-# Datasource local storage ignored files
-*/dataSources/
-*/dataSources.local.xml
-# Editor-based HTTP Client requests
-*/httpRequests/
