--- a/rest-api/pom.xml
+++ b/rest-api/pom.xml
@@ -50,6 +50,12 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>web.service</groupId>
+            <artifactId>rmi-bike</artifactId>
+            <version>1.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
