--- a/rmi-bike/pom.xml
+++ b/rmi-bike/pom.xml
@@ -9,6 +9,14 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <packaging>jar</packaging>
+    <dependencies>
+        <dependency>
+            <groupId>web.service</groupId>
+            <artifactId>rmi-customer</artifactId>
+            <version>1.0</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
     <artifactId>rmi-bike</artifactId>
 
     <properties>
