--- a/rest-api/pom.xml
+++ b/rest-api/pom.xml
@@ -51,6 +51,7 @@
     </dependencies>
 
     <build>
+        <finalName>${project.artifactId}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
