--- a/rmi-customer/pom.xml
+++ b/rmi-customer/pom.xml
@@ -17,6 +17,7 @@
     </properties>
 
     <build>
+        <finalName>${project.artifactId}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
