--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -41,6 +41,25 @@ services:
     ports:
       - 8080
 
+  web-api:
+    restart: on-failure
+    build:
+      context: ../
+      dockerfile: docker/web-app/Dockerfile
+    image: web-service/web-app
+    container_name: web-app
+    command: npm start -- --host 0.0.0.0 --disable-host-check
+    ports:
+      - 80:4200
+    volumes:
+      - ../web-app/:/web-app
+      - node_modules:/web-app/node_modules
+    networks:
+      - web-service-networks
+
+volumes:
+  node_modules:
+
 networks:
   web-service-networks:
     driver: bridge
