Add: README UPDATE:   - Change package name   - Replace "Location" into "Rent"   - Replace "Interface" into "Service"

--- a/rmi-bike/pom.xml
+++ b/rmi-bike/pom.xml
@@ -34,7 +34,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>web.service.rmi.bike.BikeService</mainClass>
+                            <mainClass>BikeService</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
