--- a/rmi-customer-interfaces/pom.xml
+++ b/rmi-customer-interfaces/pom.xml
@@ -2,19 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <artifactId>web-service</artifactId>
+        <groupId>web.service</groupId>
+        <version>1.0</version>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>web.service</groupId>
-    <artifactId>web-service</artifactId>
-    <packaging>pom</packaging>
-    <version>1.0</version>
-    <modules>
-        <module>rmi-bike</module>
-        <module>rmi-customer</module>
-        <module>rest-api</module>
-        <module>rmi-customer-interfaces</module>
-        <module>rmi-bike-interfaces</module>
-    </modules>
+    <artifactId>rmi-customer-interfaces</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
