--- a/rmi-customer/pom.xml
+++ b/rmi-customer/pom.xml
@@ -9,6 +9,20 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <packaging>jar</packaging>
+    <dependencies>
+        <dependency>
+            <groupId>web.service</groupId>
+            <artifactId>rmi-bike-interfaces</artifactId>
+            <version>1.0</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>web.service</groupId>
+            <artifactId>rmi-customer-interfaces</artifactId>
+            <version>1.0</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
     <artifactId>rmi-customer</artifactId>
 
     <properties>
@@ -26,9 +40,31 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>web.service.rmi.interfaces.customer.CustomerService</mainClass>
+                            <mainClass>CustomerService</mainClass>
                         </manifest>
                     </archive>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>CustomerService</mainClass>
+                        </manifest>
+                    </archive>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
                 </configuration>
             </plugin>
         </plugins>
