--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -41,6 +41,7 @@ services:
     ports:
       - 8080:8080
     environment:
+      - CUSTOMER_SERVICE_HOST=rmi-customer:1099/CustomerListService
       - BIKE_SERVICE_HOST=rmi-bike:1099/BikeListService
       - LOCATION_SERVICE_HOST=rmi-bike:1099/LocationListService
       - FEEDBACK_SERVICE_HOST=rmi-bike:1099/FeedBackListService
