--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>rest-api</module>
         <module>rmi-customer-interfaces</module>
         <module>rmi-bike-interfaces</module>
+        <module>web-service-sell</module>
     </modules>
 
     <properties>
