feat: initial working soap

--- a/docker/server/sites-enabled/gustavebike.com.conf
+++ b/docker/server/sites-enabled/gustavebike.com.conf
@@ -38,7 +38,7 @@ server {
         proxy_read_timeout 60s;
     }
 
-    location ~ ^/(service)/ {
+    location ~ ^/(service|xml)/ {
         proxy_pass http://web-service-sell:8080;
 
         # Proxy headers
