--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,7 @@ buildNumber.properties
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# Project ignore
+META-INF/
+web/service/wsdl/
