--- a/docker/server/sites-enabled/gustavebike.com.conf
+++ b/docker/server/sites-enabled/gustavebike.com.conf
@@ -38,7 +38,7 @@ server {
         proxy_read_timeout 60s;
     }
 
-    location ~ ^/(service|api/v2)/ {
+    location ~ ^/(service|api/v2/sell)/ {
         proxy_pass http://ws-sell:8080;
 
         # Proxy headers
@@ -74,7 +74,7 @@ server {
         proxy_read_timeout 60s;
     }
 
-    location ~ ^/(ws/bank)/ {
+    location ~ ^/(ws/bank|api/v2/bank)/ {
         proxy_pass http://ws-bank:8080;
 
         # Proxy headers
